# mlflow-3-tutorials

./: .gitignore  .pre-commit-config.yaml  README.md  Taskfile.yaml  hyperparameter-tuning-with-child-runs.ipynb  pyproject.toml  ruff.toml  yamlfix.toml
.github/: dependabot.yml
.github/workflows/: auto-merge.yml
src/mlflow_3_tutorials/: __init__.py  constants.py  deep_learning_quickstart.py  first_model.py  gpt_xgb.py  logging_visualizations.py  main.py  model_registry_quickstart.py  optuna_tuning_tracking.py  tuning_deployment.py  wine_api_call.py
src/mlflow_3_tutorials/lib/: __init__.py  constants.py  dl_utils.py  runner.py  scripts.py  server.py  utils.py
src/mlflow_3_tutorials/notebooks/: nb_hyperparameter_tuning_with_child_runs.ipynb  nb_parent_child_runs.ipynb
src/tests/: conftest.py  test_dummy.py
