[project]
name = "mlflow-3-tutorials"
version = "0.1.0"
description = "Tutorials for MLflow 3"
readme = "README.md"
authors = [
    { name = "Laurens van der Tas", email = "laurens.vandertas@gmail.com" },
]
requires-python = ">=3.12,<3.13"

dependencies = [
    "hyperopt>=0.2.7",
    "loguru>=0.7.3",
    "mlflow>=3.4.0",
    "more-itertools>=10.8.0",
    "optuna-integration>=4.5.0",
    "optuna>=4.5.0",
    "pandas>=2.3.2",
    "pip>=25.2",
    "psutil>=7.1.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
    "xgboost>=3.0.5",
]

[project.scripts]
# Repository commands
run_sync = "mlflow_3_tutorials.lib.scripts:uv_sync"
run_precommit = "mlflow_3_tutorials.lib.scripts:run_precommit"
run_pyment = "mlflow_3_tutorials.lib.scripts:run_pyment"
# MLflow commands
remove_experiments = "mlflow_3_tutorials.lib.scripts:remove_all_experiments"
start_server = "mlflow_3_tutorials.lib.scripts:start_tracking_server"
# Project commands
first_model = "mlflow_3_tutorials.first_model:main"
tuning_deployment = "mlflow_3_tutorials.tuning_deployment:main"
serve_wine_model = "mlflow_3_tutorials.lib.scripts:serve_wine_model"
deep_learning = "mlflow_3_tutorials.deep_learning_quickstart:main"
model_registry = "mlflow_3_tutorials.model_registry_quickstart:main"
optuna_tuning_tracking = "mlflow_3_tutorials.optuna_tuning_tracking:main"
logging_visualizations = "mlflow_3_tutorials.logging_visualizations:main"

[project.optional-dependencies]
tensorflow = [
    "keras>=3.11.3",
    "tensorflow>=2.20.0",
]

mlflow_extras = [
    "mlflow[extras]>=3.4.0",
]

pytorch = [
    "torch>=2.8.0",
    "torchvision>=0.23.0",
]

go_backend = [
    "mlflow-go-backend>=0.2.2",
]

[dependency-groups]
dev = [
    "basedpyright>=1.31.4",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "mccabe>=0.7.0",
    "notebook>=7.4.5",
    "pre-commit>=4.3.0",
    "pyment>=0.3.3",
    "ruff>=0.13.1",
    "yamlfix>=1.18.0",
]

test = [
    "pytest-cov>=7.0.0",
    "pytest-sugar>=1.1.1",
    "pytest-xdist>=3.8.0",
    "pytest>=8.4.2",
]

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.coverage.html]
directory = "htmlcov"

[tool.ruff]
target-version = "py312"
line-length = 80

[tool.ruff.lint]
preview = true

select = [
    "ALL",
]

ignore = [
    "CPY", # copyright
    "D",   # pydocstyle
    "DOC", # pydoclint
    "I",   # isort
    "TD",  # comments TODO
]

extend-ignore = [
    "E501", # pycodestyle
    # bandit
    "B008", # flake8-builtins
    "N806", # pep8-naming
    "S404",
    "S603",
    "S607",
    # ruff plugins hygiene
    "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed
    "COM812",  # trailing comma
    "ERA001",  # Found commented-out code
    "FIX002",  # fixme-style TODO
    "N803",    # Argument name should be lowercase
    "PGH003",
    "PGH004",
    "PLR0914", # flake8-refactor
]

fixable = [
    "ALL",
]

exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "migrations",
    "venv",
]

[tool.ruff.lint.per-file-ignores]
"**/tests/*" = [
    "S101",
]
"**/scripts/*" = [
    "INP001",
]
"**/migrations/*" = [
    "B008",
    "D",
    "E501",
    "F401",
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.format]
preview = true
quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true
docstring-code-line-length = 80

[tool.yamlfix]
indentation = 2
quote_type = "single"
explicit_start = false
explicit_end = true
trim_trailing_spaces = true
comments_min_spaces_from_content = 2
whitelines = 1
comments_whitelines = 1
section_whitelines = 1
